--- a/cms/src/scss/style.scss
+++ b/cms/src/scss/style.scss
@@ -8,4 +8,7 @@
 @import "fixes";
 
 // If you want to add something do it here
+@import "form";
+
+// If you want to add something do it here
 @import "custom";
